Minor updates and comments